[package]
name = "shizotest"
version = "0.1.0"
authors = ["Shizo <hello@shizo.space>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "=4.0.0-pre.4"
serde_json = "1.0"
rand = "0.7"
ed25519-dalek = "1.0"
bs58 = "0.4"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
